Bug 420356 - Key shortcuts fail to activate entries of latte's taskbar
Summary: Key shortcuts fail to activate entries of latte's taskbar
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: application (other bugs)
Version First Reported In: 0.9.11
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-04-20 20:28 UTC by irchaika
Modified: 2020-04-21 02:43 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
layout (13.75 KB, text/plain)
2020-04-20 21:11 UTC, irchaika
Details

Note You need to log in before you can comment on or make changes to this bug.
Description irchaika 2020-04-20 20:28:52 UTC
SUMMARY
Unable to use key shorcuts to activate task items

STEPS TO REPRODUCE
1. Use a key shorcut to trigger "Activate Entry x"

OBSERVED RESULT
Nothing happens

EXPECTED RESULT
For entry x to activate

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 5.6.4
(available in About System)
KDE Plasma Version: 5.18.4
KDE Frameworks Version: 5.69.0
Qt Version: 5.14.2

ADDITIONAL INFORMATION
Tried with different shorcuts not relying on the meta key, without any changes on the behavior
Comment 1 Michail Vourlakos 2020-04-20 20:33:16 UTC
Send me your Latte layout file please
Comment 2 irchaika 2020-04-20 21:11:56 UTC
Created attachment 127729 [details]
layout

here you go
Comment 3 Michail Vourlakos 2020-04-20 22:00:58 UTC
Your layout contains two taskmanagers,

one on the bottom and one on the right sidebar,
which one do you prefer to activate shortcuts?
Comment 4 Michail Vourlakos 2020-04-20 22:13:15 UTC
In any case...

In your Latte version do you have an option called:

"Behavior -> Items -> Activate based on position global shortcuts" in order to activate which panel/dock you would like to use for your shortcuts?
Comment 5 Michail Vourlakos 2020-04-20 22:47:43 UTC
Git commit 1ad1dd29824fa3ff70424d525aca3d7006d507eb by Michail Vourlakos.
Committed on 20/04/2020 at 22:45.
Pushed by mvourlakos into branch 'master'.

fixes for globalshortcuts highest view identify

--always find the highest view that is going to be
used for global shortcuts based on position activation
--adjust the code a bit for SideBars in order to show
when a SideBar is called for global shortcuts based
on position activation and hide correctly when the
global shortcut is not triggered any more.

M  +53   -20   app/shortcuts/globalshortcuts.cpp
M  +1    -0    app/shortcuts/globalshortcuts.h
M  +1    -1    app/view/containmentinterface.cpp

https://commits.kde.org/latte-dock/1ad1dd29824fa3ff70424d525aca3d7006d507eb
Comment 6 Michail Vourlakos 2020-04-20 22:49:26 UTC
the fix is a bit irrelevant to the reporter. The reporter needs to enable the Behavior->Items->Activate based on position global shortcuts, properly in order for its global shortcuts to work correctly
Comment 7 irchaika 2020-04-21 02:43:34 UTC
Sorry for my silence, I must have uploaded the wrong file, I did download eon layout from latte itself, but then I edited it, currently there's a single taskbar and I thought my changes would have gone to that layout files as that's what my current "distribution" is called. That said, that behavior option fixed it, I must have missed it when looking through the options, thank you.

At the very least this served to handle more layout configurations, even if it was due to me uploading the wrong file...