app/shortcuts/globalshortcuts.h
@@ -75,6 +75,7 @@ private:
 
     bool activateLatteEntry(Latte::View *view, int index, Qt::Key modifier, bool *delayedExecution);
     bool activatePlasmaTaskManager(const Latte::View *view, int index, Qt::Key modifier, bool *delayedExecution);
+    bool activateEntryForView(Latte::View *view, int index, Qt::Key modifier);
     bool viewAtLowerEdgePriority(Latte::View *test, Latte::View *base);
     bool viewAtLowerScreenPriority(Latte::View *test, Latte::View *base);
     bool viewsToHideAreValid();
